2015-03-11  Liu Xin  <meteor1113@gmail.com>

	* init-site.el (fboundp): set ecb-source-path

2015-03-10  Liu Xin  <meteor1113@gmail.com>

	* init-custom.el: Add init-custom.el

2014-10-29  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el (default-directory): update for emacs-24.4

	* init-misc.el ("tabbar"): update for emacs-24.4's desktop-save-mode.

	* init-basic.el (key-binding): update for emacs-24.4

2014-10-05  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (and): fix for server-ensure-safe-dir.

2014-09-30  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el ("tabbar"): Add "Open in Windows Explorer" to tabbar's menu.

2014-08-20  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (appt-message-warning-time): set
	appt-message-warning-time to 0.

2014-05-04  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add markdown-mode.

2014-04-09  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (*): Change zone idle from 600 to 1800.

2014-02-22  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (frame-title-format): Display encoding in title.

	* init-misc.el (require): Fix: when encoding changed, tabbar's
	status is not update.

2014-02-12  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (locate-library): Fix diff-hl for emacs-24.1

	* init-basic.el (and): Suppress error "directory ~/.emacs.d/server is unsafe" on windows.

2014-02-11  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (desktop-load-locked-desktop): Fix desktop-save-mode.
	(daemonp): Setting server.

2013-12-27  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add hl-defined.

2013-11-12  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add diff-hl.

2013-11-06  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el : Disable semantic for python when python is not found.

2013-10-31  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: default use sql-mode for .sql files.

2013-05-27  Meteor Liu  <meteor1113@gmail.com>
